end roulette(fixed visible area links and hover effect)

--- a/src/gambling&betting.html
+++ b/src/gambling&betting.html
@@ -49,9 +49,12 @@
                         </div>
                         <div class="holder-desc">
                             <div class="description">
-                                <p>We have identified the optimal set of technologies for high-quality and load-resistant
-                                    solutions. The technology stack used by us ensures fast development and high security of the
-                                    solution, as well as simplicity in the expansion of functionality. The most commonly used
+                                <p>We have identified the optimal set of technologies for high-quality and
+                                    load-resistant
+                                    solutions. The technology stack used by us ensures fast development and high
+                                    security of the
+                                    solution, as well as simplicity in the expansion of functionality. The most commonly
+                                    used
                                     technologies are:</p>
                             </div>
                         </div>
@@ -93,103 +96,221 @@
             <div class="section-title">
                 <h2>games implemented in solutions</h2>
             </div>
-            <div class="holder-section-roulette">
-                <div class="roulette">
-                   <div class="main-circle">
-                       <ul class="equal-circle">
-                           <li>
-                               <div class="text">
-                                   <span>Coin </br>Flip</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Red/Black</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Crash </br>Game</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Double </br>Game</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Jackpot</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Classic Game </br>(Roulette)</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Coin </br>Flip</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Red/Black</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Crash </br>Game</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Double </br>Game</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Jackpot</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                           <li>
-                               <div class="text">
-                                   <span>Classic Game </br>(Roulette)</span>
-                                   <img src="img/roulette-dice.png" alt="dice">
-                               </div>
-                               <a class="roulette-link" href="#"></a>
-                           </li>
-                       </ul>
-                       <div class="middle-circle"></div>
-                   </div>
+            <div class="container">
+                <div class="holder-section-roulette">
+                    <div class="roulette">
+                        <div class="main-circle">
+                            <ul class="equal-circle">
+                                <li>
+                                    <div class="text">
+                                        <span>Coin </br>Flip</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Red/Black</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Crash </br>Game</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Double </br>Game</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Jackpot</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Classic Game </br>(Roulette)</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Coin </br>Flip</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Red/Black</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Crash </br>Game</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Double </br>Game</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Jackpot</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                                <li>
+                                    <div class="text">
+                                        <span>Classic Game </br>(Roulette)</span>
+                                        <img src="img/roulette-dice.png" alt="dice">
+                                    </div>
+                                    <a class="roulette-link" href="#"></a>
+                                </li>
+                            </ul>
+                            <div class="middle-circle"></div>
+                        </div>
+                    </div>
+                    <a href="#"></a>
                 </div>
             </div>
         </section>
 
         <!--IMPLEMENTED PROJECT-->
+        <section class="section section-implemented-project">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Implemented Projects</h2>
+                </div>
+                <div class="projects-holder">
 
+                    <div class="card-project e-commerce">
+                        <img src="img/playersbid.jpg" alt="PLAYERSBID"/>
+                        <div class="mask">
+                            <h2>PLAYERSBID</h2>
+                            <p>short description project short description project short description project</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>playersbid</h3>
+                            <span>E-commerce website</span>
+                        </div>
+                    </div>
+                    <div class="card-project gamble">
+                        <img src="img/voltic.jpg" alt="VOLTIC"/>
+                        <div class="mask">
+                            <h2>CS:GO VOLTIC</h2>
+                            <p>short description project short description project short description project</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>CS:GO VOLTIC</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+                    <div class="card-project gamble">
+                        <img src="img/candy-skins.jpg" alt="CANDY SKINS"/>
+                        <div class="mask">
+                            <h2>CANDY SKINS</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut.</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>candy skins</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+
+                    <div class="card-project gamble">
+                        <img src="img/casino-roulette.jpg" alt="Management & Reporting System for casino"/>
+                        <div class="mask">
+                            <h2>Management & Reporting System for casino</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut.</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>Management & Reporting System for casino</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+                    <div class="card-project gamble">
+                        <img src="img/csteam.jpg" alt="cs:team"/>
+                        <div class="mask">
+                            <h2>cs:team</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut.</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>cs:team</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+                    <div class="card-project gamble">
+                        <img src="img/panos.jpg" alt="panos"/>
+                        <div class="mask">
+                            <h2>panos 24/7</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut.</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>panos 24/7</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+                    <div class="card-project gamble">
+                        <img src="img/freeze.jpg" alt="cs:freeze"/>
+                        <div class="mask">
+                            <h2>cs:freeze</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                exercitation ullamco laboris nisi ut.</p>
+                            <a href="#" class="arrow-btn"></a>
+                        </div>
+                        <div class="card-description">
+                            <h3>cs:freeze</h3>
+                            <span>Gamble website</span>
+                        </div>
+                    </div>
+                    <div class="card-order">
+                        <div class="company-logo">
+                            <div>
+                                <img src="img/logo.png" alt="LineUp">
+                            </div>
+                        </div>
+                        <div>
+                            <a href="#" class="default-btn">i want to make an order</a>
+                        </div>
+                    </div>
+                    <div class="card-project bg-transparent"></div>
+                </div>
+            </div>
+        </section>
 
     </main>
 
