add filter selector on portfolio page

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -31,23 +31,23 @@
                             <p>
                                 <label for="portfolio-select">Filer By:</label>
                                 <select id="portfolio-select">
-                                    <option id="all" selected value="Business engineering">Business engineering</option>
-                                    <option id="gamble" value="gamble">Gamble website</option>
-                                    <option id="class-mobile" value="mobile-web">Web & Mobile application</option>
-                                    <option id="web" value="Web application">Web application</option>
-                                    <option id="e-commerce" value="e-commerce">E-commerce website</option>
+                                    <option selected value="all">Business applications</option>
+                                    <option value="gamble">Gamble website</option>
+                                    <option value="mobile-app">Mobile application</option>
+                                    <option value="web-app">Web application</option>
+                                    <option value="e-commerce">E-commerce website</option>
                                 </select>
                             </p>
                         </form>
                     </div>
                     <ul class="portfolio-nav">
-                        <li><a href="#" class="all active">all</a></li>
-                        <li><a href="#">e-commerce</a></li>
-                        <li><a href="#">health care</a></li>
-                        <li><a href="#" class="gamb">gambling</a></li>
-                        <li><a href="#">real estate</a></li>
-                        <li><a href="#">logistics</a></li>
-                        <li><a href="#">finance</a></li>
+                        <li><a href="#" class="active">all</a></li>
+                        <li><a href="#" class="commerce">e-commerce</a></li>
+                        <li><a href="#" class="health">health care</a></li>
+                        <li><a href="#" class="gambling">gambling</a></li>
+                        <li><a href="#" class="estate">real estate</a></li>
+                        <li><a href="#" class="logistics">logistics</a></li>
+                        <li><a href="#" class="finance">finance</a></li>
                     </ul>
                 </div>
             </div>
@@ -111,7 +111,7 @@
                         <span>Gamble website</span>
                     </div>
                 </div>
-                <div class="card-project mobile-web">
+                <div class="card-project mobile-app">
                     <img src="img/cashtransfer.jpg" alt="CRASHTRANSFER"/>
                     <div class="mask">
                         <h2>CRASHTRANSFER</h2>
