connectd link to option selected

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -31,7 +31,7 @@
                             <p>
                                 <label for="portfolio-select">Filer By:</label>
                                 <select id="portfolio-select">
-                                    <option selected value="all">Business applications</option>
+                                    <option value="all" selected>Business applications</option>
                                     <option value="gamble">Gamble website</option>
                                     <option value="mobile-app">Mobile application</option>
                                     <option value="web-app">Web application</option>
@@ -41,14 +41,11 @@
                         </form>
                     </div>
                     <ul class="portfolio-nav">
-                        <li><a href="#" class="active">all</a></li>
-                        <li><a href="#" class="commerce">e-commerce</a></li>
-                        <li><a href="#" class="health">health care</a></li>
-                        <li><a href="#" class="gambling">gambling</a></li>
-                        <li><a href="#" class="estate">real estate</a></li>
-                        <li><a href="#" class="logistics">logistics</a></li>
-                        <li><a href="#" class="finance">finance</a></li>
-                    </ul>
+                        <li><a href="#" data-category="all" class="active">all</a></li>
+                        <li><a href="#" data-category="gamble">Gamble website</a></li>
+                        <li><a href="#" data-category="mobile-app">Mobile application</a></li>
+                        <li><a href="#" data-category="web-app">Web application</a></li>
+                        <li><a href="#" data-category="e-commerce">E-commerce website</a></li>
                 </div>
             </div>
         </section>
