add contact section in roulette page

--- a/src/gambling&betting.html
+++ b/src/gambling&betting.html
@@ -307,7 +307,107 @@
                             <a href="#" class="default-btn">i want to make an order</a>
                         </div>
                     </div>
-                    <div class="card-project bg-transparent"></div>
+                </div>
+            </div>
+        </section>
+
+        <!--DOWNLOAD PORTFOLIO-->
+        <div class="section section section-dl-portfolio">
+            <div class="container">
+                <div class="section-title">
+                    <h2>download our portfolio</h2>
+                </div>
+                <div class="holder-dl-portfolio">
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">english</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">french</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">italy</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">Ukrainian</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">russian</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">German</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--SECTION CONTACT-->
+        <section class="section-contact">
+            <div class="container">
+                <div class="holder-section-contact">
+                    <div class="holder-left-col">
+                        <div class="left-col">
+                            <div class="title-inner">
+                                <h2>Do you like our projects?</h2>
+                            </div>
+                            <div class="secondary-title grey-color">
+                                <span class="bg-grey">Tell us about your project - fill the form below</span>
+                            </div>
+                            <div>
+                                <a href="#" class="default-btn">Form</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="holder-right-col">
+                        <div class="right-col">
+                            <div class="title-inner">
+                                <h2>or leave your number here</h2>
+                            </div>
+                            <div class="secondary-title color-white">
+                                <span class="bg-dark">and we will call you back</span>
+                            </div>
+                            <div>
+                                <form method="post" class="callback" action>
+                                    <div class="item">
+                                        <input type="tel" placeholder="380661234567" id="call" class="phone"
+                                               pattern="[\+]\d{2}[\(]\d{3}[\)]\d{3}[\-]\d{2}[\-]\d{2}" required>
+                                        <div class="default-btn form-btn">
+                                            <input type="submit" value="get a callback!">
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
