--- a/src/voltic.html
+++ b/src/voltic.html
@@ -70,7 +70,7 @@
                 <div class="holder-section-static">
                     <div>
                         <div>
-                            <img src="../img/selling-img-voltic.png" alt="selling">
+                            <img src="img/selling-img-voltic.png" alt="selling">
                         </div>
                     </div>
                     <div>
