--- a/src/gambling&betting.html
+++ b/src/gambling&betting.html
@@ -303,7 +303,7 @@
                                 <img src="img/logo.png" alt="LineUp">
                             </div>
                         </div>
-                        <div>
+                        <div class="ww">
                             <a href="#" class="default-btn">i want to make an order</a>
                         </div>
                     </div>
