--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                             different animations.</p>
                     </div>
                     <div class="introduction-image">
-                        <img src="img/gumbbet.png" alt="gambling & betting">
+                        <img class="wow fadeInLeft" src="img/gumbbet.png" alt="gambling & betting">
                     </div>
                 </div>
             </div>
