add health and logistics pages

--- a/src/gambling&betting.html
+++ b/src/gambling&betting.html
@@ -331,23 +331,7 @@
                             <img src="img/others/dl-port.jpg" alt="portfolio-image">
                         </div>
                         <div>
-                            <a class="default-btn" href="#">french</a>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
-                        </div>
-                        <div>
                             <a class="default-btn" href="#">italy</a>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
-                        </div>
-                        <div>
-                            <a class="default-btn" href="#">Ukrainian</a>
                         </div>
                     </div>
                     <div>
@@ -363,7 +347,23 @@
                             <img src="img/others/dl-port.jpg" alt="portfolio-image">
                         </div>
                         <div>
-                            <a class="default-btn" href="#">German</a>
+                            <a class="default-btn" href="#">French</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">ukrainian</a>
+                        </div>
+                    </div>
+                    <div>
+                        <div>
+                            <img src="img/others/dl-port.jpg" alt="portfolio-image">
+                        </div>
+                        <div>
+                            <a class="default-btn" href="#">Polish</a>
                         </div>
                     </div>
                 </div>
