edits styles for mobile

--- a/src/candyskins.html
+++ b/src/candyskins.html
@@ -61,6 +61,7 @@
                             laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                 </div>
+                <div class="mob-bg"></div>
             </div>
         </section>
 
