--- a/src/voltic.html
+++ b/src/voltic.html
@@ -34,7 +34,7 @@
                             different animations.</p>
                     </div>
                     <div class="introduction-image">
-                        <img src="img/dice.png" alt="dice">
+                        <img class="wow fadeInLeft" src="img/gumbbet.png" alt="gambling & betting">
                     </div>
                 </div>
             </div>
@@ -61,6 +61,7 @@
                             laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </div>
                 </div>
+                <div class="mob-bg"></div>
             </div>
         </section>
 
