--- a/src/candyskins.html
+++ b/src/candyskins.html
@@ -34,7 +34,7 @@
                             different animations.</p>
                     </div>
                     <div class="introduction-image">
-                        <img src="img/dice.png" alt="dice">
+                        <img class="wow fadeInLeft" src="img/gumbbet.png" alt="gambling & betting">>
                     </div>
                 </div>
             </div>
